# homelab-organizer

./: .gitignore  .gitlab-ci.yml  NOTES.md  NOTES.txt  README.md  admin_app.py  adminsite.py  bootstrap.py  example.env  example.env-db  gunicorn-prod  homelab-organizer.code-workspace.example  image-to-labelprinter-notes.txt  logging.py.example  manage.py  package.json  pip.2023-05-06.list  pip.2025-02-11.list  pip.freeze  podman-postgresql.sh  project_admin_site.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset-dev.sh  search.py  sudo-nuke-db.py  sudoNukeDb.py  update-js-deps  update.py  waitserver.py  worker-devel-container.sh
bookmarklets/: elecrow.js  seedstudio.js  tindie.js
cf-worker-code/: wrangler.jsonc
cf-worker-code/hlo-worker/: package.json  pyproject.toml
container/: Containerfile  build.sh  copy_django_bootstrap_icons.sh  entrypoint.sh  run.sh
docker/: Containerfile  Dockerfile  build.sh  copy_django_bootstrap_icons.sh  docker-entrypoint.sh  entrypoint.sh  run.sh
docs/: hlo-common.conf  hlo.service
hlo/: admin.py  admin_app.py  apps.py  asgi.py  colored_logs.py  context_processors.py  filters.py  forms.py  search_indexes.py  urls.py  views.py  wsgi.py
hlo/admin/: __init__.py  attachement.py  attachment.py  category.py  order.py  orderitem.py  orderitemmeta.py  project.py  shop.py  stockitem.py  storage.py
hlo/factories/: __init__.py  attachment.py  order.py  shop.py  storage.py
hlo/filters/: __init__.py  nonorderingcombinedfilters.py  orderdaterangefilter.py  orderitemfilter.py  stockitemfilter.py
hlo/forms/: __init__.py  attachment.py  order.py  orderitem.py  shop.py  stockitem.py
hlo/migrations/: 0001_initial.py  0002_category_name_secondary_project_name_secondary_and_more.py  0003_stockitem_thumnail_sha1.py  0004_stockitem_thumbnail.py  0005_rename_thumnail_sha1_stockitem_thumbnail_sha1_and_more.py  0006_rename_thumnail_sha1_orderitem_thumbnail_sha1_and_more.py  0007_alter_order_attachements.py  0008_alter_orderitem_attachements.py  (+11 more)
inventory/: admin.py  models.py  urls.py  views.py
loader/: admin.py  apps.py  filters.py  urls.py  views.py
order_import/: admin.py  apps.py
purchases/: apps.py
search-tests/: iommi.py  iquery.py  search.py  seb.py  seb2.py
static/: waitserver.html
utils/: ai-test.py  grep  identicon.py
(+180 files in other folders)
